# perovskites_MC_ML

./: README.md  pyproject.toml
Notebook/: trainmodel1.ipynb  trainmodel2.ipynb
docs/: Literature review.md
notebook/: trainmodel1.ipynb  trainmodel2.ipynb
src/perovskites_mc_ml/: __init__.py
